Fix for skin material template, further tweaks for release

--- a/Flagrum.Web/Features/Information/About.razor
+++ b/Flagrum.Web/Features/Information/About.razor
@@ -1,18 +1,28 @@
 ﻿@page "/about"
 
-<div class="p-6">
-    <h3 class="text-grey-300">We are Exineris</h3>
+<div class="py-8 px-10" style="max-width: 800px">
+    <h2 class="text-grey-300 mb-2">We are Exineris</h2>
     <span>
-
+        Exineris is a modding and development team founded mid-2021 that aims to improve and
+        further the state of modding and mod tools for FFXV.
     </span>
 
-    <h3 class="text-grey-300">About Flagrum</h3>
+    <h4 class="text-grey-300 mt-10 mb-2">About Flagrum</h4>
     <span>
-        Flagrum was conceived as the brainchild of Kizari and impatient-traveler as an all-in-one
-        replacement for the existing mod tools.
+        Flagrum was conceived as the brainchild of Kizari and ImpatientTraveler as an all-in-one
+        replacement for the existing mod tools. With the poor state modding tools were left in with
+        development on FFXV ceased, we realised there was a dire need to improve upon the existing
+        mod tools to fix the &quot;sin skin&quot; issues and enable full-functionality for models.<br/><br/>
+        Our goals with Flagrum are to:
+        <ul class="list-disc">
+            <li class="ml-8">Improve upon and streamline the existing modding process</li>
+            <li class="ml-8">Make modding FFXV more accessible and less time consuming</li>
+            <li class="ml-8">Fix glaring issues with the previous mod tooling (sin skin, lack of support for model data and proper materials/shaders)</li>
+            <li class="ml-8">Build a quality foundation and set a precedent for the ongoing development of modding tools</li>
+        </ul>
     </span>
 
-    <h3 class="text-grey-300">Join the Cause</h3>
+    <h4 class="text-grey-300 mt-10 mb-2">Join the Cause</h4>
     <span>
         We are always looking for developers and artists to join in the good fight. Unfortunately with
         official tooling and support being cancelled, we need as much help as we can get to continue
@@ -20,10 +30,10 @@
         you want to help.
     </span>
 
-    <h3 class="text-grey-300">Want to Support Us?</h3>
-    <span>
-        These tools take a monumental amount of time and effort to develop. We are all volunteers and
-        we believe the modding tools should be free and open-source to all. If you want to help
-        support the ongoing development of Flagrum and our other projects, please consider donating.
-    </span>
+    @* <h4 class="text-grey-300 mt-10 mb-2">Want to Support Us?</h4> *@
+    @* <span> *@
+    @*     These tools take a monumental amount of time and effort to develop. We are all volunteers and *@
+    @*     we believe the modding tools should be free and open-source to all. If you want to help *@
+    @*     support the ongoing development of Flagrum and our other projects, please consider donating. *@
+    @* </span> *@
 </div>
