--- a/Flagrum.Web/Features/Information/Roadmap.razor
+++ b/Flagrum.Web/Features/Information/Roadmap.razor
@@ -1,5 +1,40 @@
 ﻿@page "/roadmap"
 
-<div class="p-6">
-    <h3 class="text-grey-300">Coming Soon™</h3>
+<div class="py-8 px-10" style="max-width: 800px">
+    <h2 class="text-grey-300 mb-2">Roadmap</h2>
+    <span>
+        The roadmap outlines our development plans moving forward. Nothing on this roadmap is set in stone,
+        and we cannot provide ETAs for anything listed here.
+    </span>
+    
+    <h4 class="text-grey-300 mt-10 mb-2">Asset Explorer</h4>
+    <span>
+        The Asset Explorer is a planned feature for Flagrum that involves providing the user with the ability
+        to browse the game files (including those within EARCs) while also laying everything out with
+        easy-to-understand names and the ability to search for a file or filter by a set criteria.<br/><br/>
+        Moving forward, the Asset Explorer is intended to be a base for modding game files by providing
+        context-aware options for exporting, editing, and replacing assets.
+    </span>
+    
+    <h4 class="text-grey-300 mt-10 mb-2">File Inspector</h4>
+    <span>
+        The File Inspector is a planned feature for Flagrum that involves providing the user with the
+        ability to view key information about game-related assets to aid in the process of modding
+        or in the development of mod tooling.
+    </span>
+    
+    <h4 class="text-grey-300 mt-10 mb-2">Visual Scripting</h4>
+    <span>
+        The Visual Scripting project is a planned effort by Exineris to unlock a new world of
+        modding for FFXV. This includes the ability to modify quests, gameplay sequences, shops,
+        and so much more. The possibilities are endless! Progress is already underway on this project,
+        but we do not currently have an ETA for release.
+    </span>
+    
+    <h4 class="text-grey-300 mt-10 mb-2">Level Editor</h4>
+    <span>
+        The Level Editor is a planned effort by Exineris to enable the development of levels, dungeons,
+        and expansions to the world itself. Focus will likely not be shifted here until after the
+        Visual Scripting project is in-service as scripts will be needed to make use of these new environments.
+    </span>
 </div>
