--- a/Flagrum.Web/Features/Information/Tutorials.razor
+++ b/Flagrum.Web/Features/Information/Tutorials.razor
@@ -1,5 +1,22 @@
 ﻿@page "/tutorials"
 
-<div class="p-6">
-    <h3 class="text-grey-300">Coming Soon™</h3>
+<div class="py-8 px-10">
+    <h2 class="text-grey-300 mb-2">Tutorials</h2>
+    <span>
+        We have curated a selection of tutorials to help with the usage of Flagrum and the creation of Flagrum mods.<br />
+        This list will be updated over time as new tutorials are available and as Flagrum evolves, so please
+        check back from time to time.
+    </span>
+    
+    <h4 class="text-grey-300 mt-8 mb-4">Flagrum Tutorials</h4>
+    
+    <Hyperlink Text="General Usage Tutorial by ImpatientTraveler" Uri="https://drive.google.com/drive/folders/1XNdAprrSrn3d77vtLqcgNT8faj3tHe7F" /><br/>
+    <Hyperlink Text="Interface Tutorial by ImpatientTraveler" Uri="https://drive.google.com/drive/folders/1Fwwi7KWBgd5FlxG9dFGwuROVx97e--ld" /><br/>
+    <Hyperlink Text="Custom Model Replacements Tutorial by Kizari" Uri="" />
+    
+    <h4 class="text-grey-300 mt-8 mb-4">3D Modelling Tutorials</h4>
+    
+    <Hyperlink Text="Ambient Occlusion (AO) Tutorial by ImpatientTraveler" Uri="https://drive.google.com/drive/folders/1n_e_EpqQa8MO1AxhmeNmdaeAwn3tIP9b" /><br/>
+    <Hyperlink Text="Metalness/Roughness/Specularity (MRS) Tutorial by ImpatientTraveler" Uri="https://drive.google.com/drive/folders/1EmndKk7QW3A9kg0hPVEWNlGQ76tzR-R0" /><br/>
+    <Hyperlink Text="Vertex Colours Tutorial by ImpatientTraveler" Uri="https://drive.google.com/drive/folders/1UQfOCGXKcPCUjfvLryDNLWwAmLzJ1Yyr" />
 </div>
