--- a/Flagrum.Web/Layout/MainMenu.razor
+++ b/Flagrum.Web/Layout/MainMenu.razor
@@ -1,4 +1,7 @@
-﻿<CascadingValue Value="this">
+﻿@using System.Diagnostics
+@inject IWpfService WpfService
+
+<CascadingValue Value="this">
     <div class="h-full bg-dark flex-shrink-0 flex flex-col border-dark-550 border-r">
         <MenuItem Icon="apps" Text="Mod Library" DefaultActive="true" Uri="/"/>
         <MenuItem Icon="menu_book" Text="Tutorials" Uri="/tutorials"/>
@@ -9,12 +12,23 @@
         <div class="flex-grow"></div>
         <MenuItem Icon="info_outline" Text="About" Uri="/about"/>
         <MenuItem Icon="settings" Text="Settings" Uri="/settings"/>
+        <img @onclick="OpenDiscordLink" src="discord-button.png" class="p-2 rounded-md bg-grey-800 shadow-md mt-4 mx-4 cursor-pointer" style="max-width: 150px"/>
+        <div class="p-4">
+            <small class="text-grey-500">Flagrum v@(Version)</small>
+        </div>
     </div>
 </CascadingValue>
 
 @code
 {
     private List<MenuItem> Items { get; set; } = new();
+    private string Version { get; set; }
+
+    protected override void OnInitialized()
+    {
+        var v = WpfService.GetVersion();
+        Version = $"{v.Major}.{v.Minor}.{v.Build}";
+    }
 
     public void AddItem(MenuItem item)
     {
@@ -36,5 +50,14 @@
         }
 
         StateHasChanged();
+    }
+
+    private void OpenDiscordLink()
+    {
+        const string url = "https://discord.gg/7cNNwwJKsJ";
+        Process.Start(new ProcessStartInfo(url)
+        {
+            UseShellExecute = true
+        });
     }
 }
