Refactoring and fixes for Comrades Thumbnails

--- a/Flagrum.Web/Features/Information/Tutorials.razor
+++ b/Flagrum.Web/Features/Information/Tutorials.razor
@@ -16,7 +16,7 @@
     
     <h4 class="text-grey-300 mt-8 mb-4">3D Modelling Tutorials</h4>
     
-    <Hyperlink Text="Ambient Occlusion (AO) Tutorial by ImpatientTraveler" Uri="https://drive.google.com/drive/folders/1n_e_EpqQa8MO1AxhmeNmdaeAwn3tIP9b" /><br/>
+    <Hyperlink Text="Ambient Occlusion (AO) and Texture Baking Tutorial by ImpatientTraveler" Uri="https://drive.google.com/drive/folders/1n_e_EpqQa8MO1AxhmeNmdaeAwn3tIP9b" /><br/>
     <Hyperlink Text="Metalness/Roughness/Specularity (MRS) Tutorial by ImpatientTraveler" Uri="https://drive.google.com/drive/folders/1EmndKk7QW3A9kg0hPVEWNlGQ76tzR-R0" /><br/>
     <Hyperlink Text="Vertex Colours Tutorial by ImpatientTraveler" Uri="https://drive.google.com/drive/folders/1UQfOCGXKcPCUjfvLryDNLWwAmLzJ1Yyr" />
 </div>
