--- a/Flagrum.Web/Features/ModLibrary/Components/ModListingCard.razor
+++ b/Flagrum.Web/Features/ModLibrary/Components/ModListingCard.razor
@@ -1,5 +1,5 @@
 ﻿@inject NavigationManager Navigation
-@inject Settings Settings
+@inject SettingsService Settings
 @inject JSInterop Interop
 @inject AppStateService AppState
 
