--- a/Flagrum.Web/Features/Settings/SettingsPage.razor
+++ b/Flagrum.Web/Features/Settings/SettingsPage.razor
@@ -1,6 +1,6 @@
 ﻿@page "/settings"
 
-@inject Settings Settings
+@inject SettingsService Settings
 @inject IWpfService WpfService
 
 <div class="p-6">
