--- a/Flagrum.Web/Layout/MainLayout.razor
+++ b/Flagrum.Web/Layout/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 @inject AppStateService AppState
-@inject Settings Settings
+@inject SettingsService Settings
 @inject JSInterop Interop
 
 <div class="flex flex-row h-full">
