--- a/Flagrum.Web/Features/ModLibrary/Stats/Weapon.razor
+++ b/Flagrum.Web/Features/ModLibrary/Stats/Weapon.razor
@@ -1,4 +1,5 @@
-﻿@using Flagrum.Web.Features.ModLibrary.Data
+﻿@using Index = Flagrum.Web.Features.ModLibrary.Editor.Index
+@using Flagrum.Web.Features.ModLibrary.Data
 @using Flagrum.Core.Archive
 <div class="box mt-6">
     <EditForm Model="Stats">
@@ -132,7 +133,7 @@
 @code
 {
     [CascadingParameter]
-    public Configure Parent { get; set; }
+    public Index Parent { get; set; }
 
     private Dictionary<Stat, StatsModel> Stats { get; set; }
 
