--- a/Flagrum.Web/Features/Information/About.razor
+++ b/Flagrum.Web/Features/Information/About.razor
@@ -30,10 +30,11 @@
         you want to help.
     </span>
 
-    @* <h4 class="text-grey-300 mt-10 mb-2">Want to Support Us?</h4> *@
-    @* <span> *@
-    @*     These tools take a monumental amount of time and effort to develop. We are all volunteers and *@
-    @*     we believe the modding tools should be free and open-source to all. If you want to help *@
-    @*     support the ongoing development of Flagrum and our other projects, please consider donating. *@
-    @* </span> *@
+     <h4 class="text-grey-300 mt-10 mb-2">Want to Support Us?</h4>
+     <span>
+         These tools take a monumental amount of time and effort to develop. We are all volunteers and
+         we believe the modding tools should be free and open-source to all. If you want to help
+         support the ongoing development of Flagrum and our other projects, please consider donating.
+     </span> 
+     <BmcButton CssClass="mt-6" />
 </div>
