--- a/Flagrum.Web/Features/Information/Tutorials.razor
+++ b/Flagrum.Web/Features/Information/Tutorials.razor
@@ -10,13 +10,13 @@
     
     <h4 class="text-grey-300 mt-8 mb-4">Flagrum Tutorials</h4>
     
-    <Hyperlink Text="General Usage Tutorial by ImpatientTraveler" Uri="https://drive.google.com/drive/folders/1XNdAprrSrn3d77vtLqcgNT8faj3tHe7F" /><br/>
-    <Hyperlink Text="Interface Tutorial by ImpatientTraveler" Uri="https://drive.google.com/drive/folders/1Fwwi7KWBgd5FlxG9dFGwuROVx97e--ld" /><br/>
-    <Hyperlink Text="Custom Model Replacements Tutorial by Kizari" Uri="" />
+    <Hyperlink Text="Interface Tutorial by ImpatientTraveler" Uri="https://github.com/Kizari/Flagrum/wiki/Interface-Tutorial" /><br/>
+    <Hyperlink Text="General Usage Tutorial by ImpatientTraveler" Uri="https://github.com/Kizari/Flagrum/wiki/General-Usage-Tutorial" /><br/>
+    <Hyperlink Text="Custom Model Replacements Tutorial by Kizari" Uri="https://github.com/Kizari/Flagrum/wiki/Custom-Model-Replacements-Tutorial" />
     
     <h4 class="text-grey-300 mt-8 mb-4">3D Modelling Tutorials</h4>
     
-    <Hyperlink Text="Ambient Occlusion (AO) and Texture Baking Tutorial by ImpatientTraveler" Uri="https://drive.google.com/drive/folders/1n_e_EpqQa8MO1AxhmeNmdaeAwn3tIP9b" /><br/>
-    <Hyperlink Text="Metalness/Roughness/Specularity (MRS) Tutorial by ImpatientTraveler" Uri="https://drive.google.com/drive/folders/1EmndKk7QW3A9kg0hPVEWNlGQ76tzR-R0" /><br/>
-    <Hyperlink Text="Vertex Colours Tutorial by ImpatientTraveler" Uri="https://drive.google.com/drive/folders/1UQfOCGXKcPCUjfvLryDNLWwAmLzJ1Yyr" />
+    <Hyperlink Text="Ambient Occlusion (AO) and Texture Baking Tutorial by ImpatientTraveler" Uri="https://github.com/Kizari/Flagrum/wiki/Ambient-Occlusion-(AO)-and-Texture-Baking-Tutorial" /><br/>
+    <Hyperlink Text="Metalness/Roughness/Specularity (MRS) Tutorial by ImpatientTraveler" Uri="https://github.com/Kizari/Flagrum/wiki/Metalness-Roughness-Specularity-(MRS)-Tutorial" /><br/>
+    <Hyperlink Text="Vertex Colours Tutorial by ImpatientTraveler" Uri="https://github.com/Kizari/Flagrum/wiki/Vertex-Colours-Tutorial" />
 </div>
