Added decompression to archive reader, started on HTML viewer

--- a/Flagrum.Web/Components/Controls/Hyperlink.razor
+++ b/Flagrum.Web/Components/Controls/Hyperlink.razor
@@ -1,5 +1,5 @@
 ﻿@using System.Diagnostics
-<span @onclick="OnClick" class="text-accent1-200 mt-2 inline-block underline cursor-pointer hover:text-white">@Text</span>
+<span @onclick="OnClick" class="hyperlink">@Text</span>
 
 @code
 {
